--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html, body, #root {
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100%;
   justify-content: center;
   width: 100%;
 }
