--- a/src/globals.scss
+++ b/src/globals.scss
@@ -34,3 +34,8 @@ body * {
   font-style: normal;
   src: url('/fonts/Jost_VariableFont_wght.ttf') format('truetype');
 }
+
+.mermaid {
+  text-align: center;
+  margin: 20px auto;
+}
